<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.LoginActivity">

        <TextView
            android:id="@+id/loginLoginTextView"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:text="@string/login_login_text"/>

        <EditText
            android:id="@+id/loginLoginEditText"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="150dp"/>

        <TextView
            android:id="@+id/loginPasswordTextView"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="30dp"
            android:gravity="center"
            android:text="@string/password_text"/>

        <EditText
            android:id="@+id/loginPasswordEditText"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="250dp"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="350dp"
            android:layout_height="80dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/login_button"
            android:layout_marginTop="350dp"/>

    </FrameLayout>

</ScrollView>